# ChangeLog for sys-apps/most
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/most/ChangeLog,v 1.42 2008/03/10 14:05:32 drac Exp $

  10 Mar 2008; Samuli Suominen <drac@gentoo.org>
  -files/most-4.10.2-fix-goto-line.diff, -most-4.10.2-r1.ebuild,
  most-5.0.0a.ebuild:
  amd64 stable wrt #212788

  10 Mar 2008; Raúl Porcel <armin76@gentoo.org> most-5.0.0a.ebuild:
  alpha/sparc stable wrt #212788

  09 Mar 2008; nixnut <nixnut@gentoo.org> most-5.0.0a.ebuild:
  Stable on ppc wrt bug 212788

  09 Mar 2008; Markus Meier <maekke@gentoo.org> most-5.0.0a.ebuild:
  x86 stable, bug #212788

  10 Feb 2008; Ryan Hill <dirtyepic@gentoo.org> most-5.0.0a.ebuild:
  Rekeyword mips for bug #209507.

  10 Feb 2008; Raúl Porcel <armin76@gentoo.org> most-5.0.0a.ebuild:
  Re-add ~alpha

*most-5.0.0a (10 Feb 2008)

  10 Feb 2008; Samuli Suominen <drac@gentoo.org> +most-5.0.0a.ebuild:
  Version bump for bugs 185563 and 199079, thanks to Jarnie Webb and Rafał
  Mużyło for reporting.

  09 Feb 2008; Samuli Suominen <drac@gentoo.org> most-4.10.2-r1.ebuild:
  Fix most for slang 2.1.3.

  26 Oct 2007; Diego Pettenò <flameeyes@gentoo.org> -most-4.9.5.ebuild:
  Remove old version, closes bug #160173.

  03 Jul 2007; Fabian Groffen <grobian@gentoo.org> most-4.9.5.ebuild,
  most-4.10.2-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  30 Jun 2007; Raúl Porcel <armin76@gentoo.org> most-4.10.2-r1.ebuild:
  alpha stable wrt #182435

  20 Jun 2007; Joseph Jezak <josejx@gentoo.org> most-4.10.2-r1.ebuild:
  Marked ppc stable for bug #182435.

  18 Jun 2007; Christoph Mende <angelos@gentoo.org> most-4.10.2-r1.ebuild:
  Stable on amd64 wrt bug 182435

  11 May 2007; Joshua Kinard <kumba@gentoo.org> most-4.10.2-r1.ebuild:
  Stable on mips.

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> most-4.10.2-r1.ebuild:
  Stable on sparc

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> most-4.10.2-r1.ebuild:
  x86 stable
